removed unnecessary files, fixed profile pic, added new project

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Engineer &middot; Developer &middot; Leader</div></div>
-                                <div class="fs-3 fw-light text-muted">Radar Systems Engineer</div>
+                                <div class="fs-3 fw-light text-muted">Systems Engineer</div>
                                 <div class="fs-5 fw-light text-muted">Lockheed Martin RMS</div>
                                 <br>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Electrical & Computer Engineer</span></h1>
@@ -193,22 +193,28 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">Hello! My name is Krutik Shah. I am currently
-                                    working at Lockheed Martin as an Radar Systems Engineer.
+                                <p class="lead fw-light mb-4">Hello! I am currently
+                                    working at Lockheed Martin as a Systems Engineer on the Sanctum project.
+                                    <br><br>
                                     I have a Bachelor's degree in Electrical & Computer Engineering (ECE) from Rowan University (Class of 2023).
+                                    <br><br>
                                     I am currently working on my Master's degree in Space Systems Engineering from Johns Hopkins University.
-                                <p class="text-muted">I was born in Kalol, India and I moved to the US in 2007 with my parents.
-                                    I grew up in Flemington, NJ where I went to Hunterdon Central Regional High School.
-                                    At the high school, I was a part of the FIRST Robotics Team (FRC) Team 3637.
-                                    I was also a student worker for school's IT department. I attended college at Rowan University 
-                                    for an ECE degree, where I was a student worker for the ECE department, working in 
+                                <p class="text-muted">
+                                    At Hunterdon Central Regional High School, I was a part of the FIRST Robotics Team (FRC) Team 3637.
+                                    I was also a student worker for school's IT department.
+                                    <br><br>
+                                    At Rowan University, I was a student worker for the ECE department, working in 
                                     the Resource Center, Fabrication Center, and Assembly Center. Additionally, I worked on
                                     a research project for the Advanced Materials & Manufacturing Institute (AMMI),
                                     at the South Jersey Technology Park where I helped develop a composite DLP printer.
+                                    <br><br>
                                     I also was the Vice President of the American Institute of Aeronautics & Astronautics (AIAA),
                                     the student branch at Rowan University.
                                     <br><br>
-                                    I am passionate about PCB design & assembly, 3D printing, robotics, aerospace and aeronautics!
+                                    I currently have a Part 107 certificate to conduct commercial drone operations.
+                                    <br><br>
+                                    I am passionate about 3D printing, robotics, aerospace and aeronautics! My hobbies include photography and flying drones!
+                                    <br><br>
                                 </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://www.instagram.com/krutikshah1/"><i class="bi bi-instagram"></i></a>
