--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,21 @@
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <!-- Project Card 0-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5 ">
+                                            <h2 class="fw-bolder">Composite DLP Printer</h2>
+                                            <p>A Digital Light Processing (DLP) printer used to print composite parts out of resin and another material, such as fiberglass.</p>
+                                            <h1>
+                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Composite_DLP_Printing.pdf">Documentation</button>
+                                            </h1>
+                                        </div>
+                                        <img class="img-fluid-projects" src="Pictures/Projects/CompositePrinter.JPG" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
