--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                                             <h2 class="fw-bolder">Composite DLP Printer</h2>
                                             <p>A Digital Light Processing (DLP) printer used to print composite parts out of resin and another material, such as fiberglass.</p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Composite_DLP_Printing.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Composite_DLP_Printing.pdf">Documentation</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/CompositePrinter.JPG" alt="..." />
@@ -74,9 +74,9 @@
                                             <h2 class="fw-bolder">D-Flip-Flop: VLSI Design</h2>
                                             <p>D-Flip-Flop in Master & Slave configuration using Preset & Clear, designed and simulated in Cadence Virtuoso with full standard-cell library/snap-together layout. Final project for Very Large Scale Integration (VLSI).</p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/DFF-MasterSlave.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/DFF-MasterSlave.pdf">Documentation</a>
                                                 <br>
-                                                <button class="btn btn-outline-dark btn-sm px-5 fs-6 fw-bolder" href="https://github.com/shahkr85/VLSI-Final-Project">GitHub</button>
+                                                <a class="btn btn-outline-dark btn-sm px-5 fs-6 fw-bolder" href="https://github.com/shahkr85/VLSI-Final-Project">GitHub</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/DFF.png" alt="..." />
@@ -91,7 +91,7 @@
                                             <h2 class="fw-bolder">ADS-B Flight Tracker</h2>
                                             <p>Using an RTL-SDR & an open source software called "Dump1090", flights within a local area were tracked. The main goal of this project is to manually decode various ADS-B signals received by the RTL-SDR and analyze the algorithms used by Dump1090 to decode.</p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/ADS-B Flight Tracker.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/ADS-B Flight Tracker.pdf">Documentation</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/ADS-B_Flight_Tracker.jpg" alt="..." />
@@ -106,9 +106,9 @@
                                             <h2 class="fw-bolder">32-Bit ARM Processor</h2>
                                             <p>Verilog-designed 32-bit ARM processor, featuring 32 x 64-bit general purpose registors and 255 x 64-bit data memory registers. Consists of Arithmetic Logic Unit (ALU), Control Unit, Program Counter, Random Access Memory (RAM), and Read-Only Memory (ROM). Designed in Intel Quartus Prime.</p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Processor.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Processor.pdf">Documentation</a>
                                                 <br>
-                                                <button class="btn btn-outline-dark btn-sm px-5 fs-6 fw-bolder" href="https://github.com/shahkr85/Computer-Architecture-Processor">GitHub</button>
+                                                <a class="btn btn-outline-dark btn-sm px-5 fs-6 fw-bolder" href="https://github.com/shahkr85/Computer-Architecture-Processor">GitHub</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/CompArchProcessor.png" alt="..." />
@@ -123,7 +123,7 @@
                                             <h2 class="fw-bolder">Tri-Oscillator</h2>
                                             <p>PCB design project utilizing three oscillator circuits: Tone Drone Oscillator, Astable Multivibrator, & BJT Phase Shift Oscillator. Additionally all three oscillators are summed together and connected to a mixer to listen to. In addition to the Altium development, the class was taught PCB design. </p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Tri-Oscillator.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Tri-Oscillator.pdf">Documentation</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/Tri-Oscillator.png" alt="..." />
@@ -138,7 +138,7 @@
                                             <h2 class="fw-bolder">Combination Lock</h2>
                                             <p>Combination lock designed with Intel Quartus Prime Lite with Block Level Schematic and using a DE-10 Lite FPGA.</p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/CombinationLock.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/CombinationLock.pdf">Documentation</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/CombinationLock.png" alt="..." />
@@ -153,9 +153,9 @@
                                             <h2 class="fw-bolder">Thrust Vector Control System</h2>
                                             <p>Embedded system consisting of STM32 microcontroller, 6-axis gyroscope and 2 servos along with mechanical design. Designed to stabilize trajectory of a model rocket based on gyroscope readings and report flight statistics.</p>
                                             <h1>
-                                                <button class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Thrust Vector Control.pdf">Documentation</button>
+                                                <a class="btn btn-primary btn-sm px-3 me-sm-3 fs-6 fw-bolder" href="Projects/Thrust Vector Control.pdf">Documentation</a>
                                                 <br>
-                                                <button class="btn btn-outline-dark btn-sm px-5 fs-6 fw-bolder" class="text-gradient" href="https://github.com/shahkr85/ThrustVectorControl">GitHub</button>
+                                                <a class="btn btn-outline-dark btn-sm px-5 fs-6 fw-bolder" class="text-gradient" href="https://github.com/shahkr85/ThrustVectorControl">GitHub</a>
                                             </h1>
                                         </div>
                                         <img class="img-fluid-projects" src="Pictures/Projects/TVC.png" alt="..." />
